<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_300dp"
    android:layout_height="@dimen/_200dp"
    android:orientation="vertical">

    <EditText
        android:fontFamily="@font/arial"
        android:id="@+id/edt_tenWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/nhaptenwifi"
        android:padding="@dimen/_10dp"></EditText>

    <EditText
        android:fontFamily="@font/arial"
        android:id="@+id/edt_passwordWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/nhappassword"
        android:padding="@dimen/_10dp"></EditText>

    <Button
        android:fontFamily="@font/arial"
        android:id="@+id/btn_dongy"
        android:background="@color/md_blue_grey_300"
        android:text="@string/dongy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>


</LinearLayout>