<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBachground">

        <TextView
            android:fontFamily="@font/arial"
            android:padding="@dimen/_60dp"
            android:layout_marginTop="@dimen/_180sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chuoikhoiphucMK">
        </TextView>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_250dp"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical"
            android:padding="@dimen/_30dp">

            <EditText

                android:id="@+id/edt_username_KP"
                android:layout_width="@dimen/_250dp"
                android:layout_height="@dimen/_40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20dp"
                android:background="#00000000"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:ems="10"
                android:fontFamily="@font/arial"
                android:hint="@string/Email"
                android:padding="@dimen/_10dp"
                android:textColor="@color/white"
                android:textSize="15dp">
            </EditText>

            <Button
                android:id="@+id/btn_guimail_XN"
                android:layout_width="@dimen/_200sp"
                android:layout_height="@dimen/_50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30dp"
                android:background="@drawable/radius"
                android:drawableTint="@color/teal_700"
                android:fontFamily="@font/arial"
                android:text="@string/guimailKP"
                android:textColor="@color/teal_700">
            </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_50dp"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/arial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thanhvien"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15dp">
                </TextView>

                <TextView
                    android:fontFamily="@font/arial"
                    android:id="@+id/txt_dangkimoi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dangkimoi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15dp">
                </TextView>
            </LinearLayout>

            <TextView
                android:fontFamily="@font/arial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_140sp"
                android:text="@string/khoiphucmatkhau"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_30dp"
                android:textStyle="bold"></TextView>

        </LinearLayout>

    </FrameLayout>


</RelativeLayout>