<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp">
        <RadioButton
            android:fontFamily="@font/arial"
            android:textColor="@drawable/changetext_tab_tc"
            android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:textAlignment="center"
            android:button="@android:color/transparent"
            android:text="@string/moinhat"
            android:id="@+id/rDobtn_Moi"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RadioButton>
        <View
            android:background="@color/backgroundtrangchu"
            android:layout_width="@dimen/_1dp"
            android:layout_height="match_parent">
        </View>

        <RadioButton
            android:fontFamily="@font/arial"
            android:textColor="@drawable/changetext_tab_tc"
            android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:textAlignment="center"
            android:button="@android:color/transparent"
            android:text="@string/danhmuc"
            android:id="@+id/rDobtn_danhmuc"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RadioButton>
        <View
            android:background="@color/backgroundtrangchu"
            android:layout_width="@dimen/_1dp"
            android:layout_height="match_parent">
        </View>

        <RadioButton
            android:fontFamily="@font/arial"
            android:textColor="@drawable/changetext_tab_tc"
            android:textAlignment="center"
            android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:button="@android:color/transparent"
            android:text="@string/khuvuc"
            android:id="@+id/rDobtn_khuvuc"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RadioButton>
    </RadioGroup>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:fontFamily="@font/arial"
                    android:drawablePadding="@dimen/_10dp"
                    android:drawableLeft="@drawable/nearby"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:textAllCaps="false"
                    android:text="@string/Nearby"
                    android:layout_margin="@dimen/_5dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
                <Button
                    android:fontFamily="@font/arial"
                    android:drawablePadding="@dimen/_10dp"
                    android:drawableLeft="@drawable/nearby"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:text="@string/Giaohang"
                    android:textAllCaps="false"
                    android:layout_margin="@dimen/_5dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:fontFamily="@font/arial"
                    android:drawablePadding="@dimen/_10dp"
                    android:drawableLeft="@drawable/gameandfun"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:textAllCaps="false"
                    android:text="@string/gameandfun"
                    android:layout_margin="@dimen/_5dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
                <Button
                    android:fontFamily="@font/arial"
                    android:drawablePadding="@dimen/_10dp"
                    android:drawableLeft="@drawable/review"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:text="@string/review"
                    android:textAllCaps="false"
                    android:layout_margin="@dimen/_5dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:fontFamily="@font/arial"
                    android:drawablePadding="@dimen/_10dp"
                    android:drawableLeft="@drawable/blog"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:textAllCaps="false"
                    android:text="@string/blogs"
                    android:layout_margin="@dimen/_5dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
                <Button
                    android:fontFamily="@font/arial"
                    android:drawablePadding="@dimen/_10dp"
                    android:drawableLeft="@drawable/user"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:text="@string/topmemmber"
                    android:textAllCaps="false"
                    android:layout_margin="@dimen/_5dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>