<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10dp"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_chuphinh"
            android:layout_width="@dimen/_70dp"
            android:layout_height="@dimen/_70dp"
            android:src="@drawable/img_mini_themhinh"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_tenmon"
                android:fontFamily="@font/arial"
                android:hint="@string/tenmon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_giatien"
                    android:fontFamily="@font/arial"
                    android:hint="@string/giatien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></EditText>

                <Spinner
                    android:id="@+id/spinnerThucDon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Spinner>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_ThemCloneThucDon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/defaultbackground"
        android:padding="@dimen/_5dp"
        android:text="@string/themthucdon"></Button>

</LinearLayout>