<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RadioGroup
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp">
            <RadioButton
                android:textColor="@drawable/changetext_tab_tc"
                android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:textAlignment="center"
                android:button="@android:color/transparent"
                android:text="@string/moinhat"
                android:id="@+id/rDobtn_Moi"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </RadioButton>
            <View
                android:background="@color/backgroundtrangchu"
                android:layout_width="@dimen/_1dp"
                android:layout_height="match_parent">
            </View>

            <RadioButton
                android:textColor="@drawable/changetext_tab_tc"
                android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:textAlignment="center"
                android:button="@android:color/transparent"
                android:text="@string/danhmuc"
                android:id="@+id/rDobtn_danhmuc"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </RadioButton>
            <View
                android:background="@color/backgroundtrangchu"
                android:layout_width="@dimen/_1dp"
                android:layout_height="match_parent">
            </View>

            <RadioButton
                android:textColor="@drawable/changetext_tab_tc"
                android:textAlignment="center"
                android:drawableBottom="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:button="@android:color/transparent"
                android:text="@string/khuvuc"
                android:id="@+id/rDobtn_khuvuc"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </RadioButton>
        </RadioGroup>
        <androidx.core.widget.NestedScrollView
            app:layout_behavior=""
            android:clipToPadding="true"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:id="@+id/nestedScrollViewOdau"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:drawablePadding="@dimen/_10dp"
                        android:drawableLeft="@drawable/nearby"
                        android:gravity="left|center"
                        android:padding="@dimen/_10dp"
                        android:textAllCaps="false"
                        android:text="@string/Nearby"
                        android:layout_margin="@dimen/_5dp"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </Button>
                    <Button
                        android:drawablePadding="@dimen/_10dp"
                        android:drawableLeft="@drawable/nearby"
                        android:gravity="left|center"
                        android:padding="@dimen/_10dp"
                        android:text="@string/Giaohang"
                        android:textAllCaps="false"
                        android:layout_margin="@dimen/_5dp"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </Button>
                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:drawablePadding="@dimen/_10dp"
                        android:drawableLeft="@drawable/gameandfun"
                        android:gravity="left|center"
                        android:padding="@dimen/_10dp"
                        android:textAllCaps="false"
                        android:text="@string/gameandfun"
                        android:layout_margin="@dimen/_5dp"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </Button>
                    <Button
                        android:drawablePadding="@dimen/_10dp"
                        android:drawableLeft="@drawable/review"
                        android:gravity="left|center"
                        android:padding="@dimen/_10dp"
                        android:text="@string/review"
                        android:textAllCaps="false"
                        android:layout_margin="@dimen/_5dp"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </Button>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:drawablePadding="@dimen/_10dp"
                        android:drawableLeft="@drawable/blog"
                        android:gravity="left|center"
                        android:padding="@dimen/_10dp"
                        android:textAllCaps="false"
                        android:text="@string/blogs"
                        android:layout_margin="@dimen/_5dp"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </Button>
                    <Button
                        android:drawablePadding="@dimen/_10dp"
                        android:drawableLeft="@drawable/user"
                        android:gravity="left|center"
                        android:padding="@dimen/_10dp"
                        android:text="@string/topmemmber"
                        android:textAllCaps="false"
                        android:layout_margin="@dimen/_5dp"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </Button>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recy_fragment_odau"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </androidx.recyclerview.widget.RecyclerView>
                <ProgressBar
                    android:id="@+id/progressBarODau"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

